# aviutl_gcmzdrops

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .stylua.toml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  aviutl.pas  build.bash  imagedroptarget.pas  main.pas  oledd.lpi  pack.bat  util.pas
.github/workflows/: main.yml  releaser.yml
src/: imagedroptarget.pas  inputdialog.pas  inputdialog.res  main.pas  oledd.lpi  oledd.lpr  util.pas
src/c/: CMakeLists.txt  api.c  api.h  aviutl.c  aviutl.h  base.c  base.h  base_test.c  datauri.c  datauri.h  datauri_test.c  droptarget.c  droptarget.h  error_gcmz.c  error_gcmz.h  error_win32.c  error_win32.h  exoloadhook.c  exoloadhook.h  files.c  files.h  gcmz.rc  gcmzdrops.c  gcmzdrops.h  gcmzfuncs.c  gcmzfuncs.h  gcmzfuncs_test.c  gui.c  gui.h  i18n.rc.tmpl  i18n_rc.cmake  lua.c  lua.h  luafuncs.c  luafuncs.h  luafuncs_convertencoding.c  luafuncs_convertencoding.h  luafuncs_test.c  luautil.c  luautil.h  (+12 more)
src/c/3rd/crc64/: crc64.c  crc64.h
src/c/3rd/detect/: detect.c  detect.h
src/c/3rd/threads/: threads.h  threads_win32.h
src/c/util/: 0.exo  1.exo  2.exo  _transmap1.lua  _transmap2.lua  gentransmap.c  gentransmap.lua
src/cmake/: lua51dl.cmake  version.cmake
src/i18n/: README.jp.md  README.md  finish.bash  ja.po.DO_NOT_EDIT  langs.csv  start.bash  zh_CN.po.DO_NOT_EDIT
src/lazarus/: GCMZDrops.lpi  GCMZDrops.lpr  api.pas  aviutl.pas  droptarget.pas  inputdialog.pas  inputdialog.res  luafuncs.pas  luaini.pas  luaobj.pas  main.pas  scriptabledropper.pas  usedfiles.pas  util.pas
src/lua/: _entrypoint.lua  _exoloadhook.lua  _iniobj.lua  _transmap.lua  _transmap1.lua  _transmap2.lua  avoiddup.lua  example.lua  generic.lua  textsjis.lua  wmvmask.lua
src/lua/dropper/: clipboard.lua  example.lua
