cmake_minimum_required(VERSION 3.21)
set(CMAKE_C_COMPILER clang)
set(CMAKE_C_STANDARD 23)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)
if ("${CMAKE_BUILD_TYPE}" STREQUAL "")
  set(CMAKE_BUILD_TYPE "Release" CACHE STRING "" FORCE)
endif()
project(aviutl_gcmzdrops C)
enable_language(C)
enable_language(RC)
enable_testing()

add_subdirectory(src/c)
